--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
-  "redirects": [{ "source": "/", "destination": "/api" }]
+  "builds": [{ "src": "main.py", "use": "@vercel/python" }],
+  "routes": [{ "src": "/(.*)", "dest": "main.py" }]
 }
